2009-01-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyperl.el (tinyperl-pod-grep-faq-data-context-1):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).

	* tiny/tinylibmail.el (ti::mail-whois-parse-paragraph):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-tech):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-zone):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-records):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-admin):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-admin):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).

	* tiny/tinyirc.el (tinyirc-pastebot-install-perl-util-pastebot):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).

2009-01-08  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-url): Add savannah.gnu.org support.
	(tinydebian-bug-gnu-savannah-support-string-p): New.
	(tinydebian-bug-gnu-savannah-p): New.

2008-11-14  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-ctrl-tags-ask): Add arg MESSAGE.
	(tinydebian-bts-mail-ctrl-command-tags): Show bug number when
	asking tags.
	(tinydebian-mail-mode) [wizard] Define Menu keys for
	`tinydebian-bug-browse-url-by-bug',
	`tinydebian-bug-browse-url-by-package-bugs',
	`tinydebian-bug-browse-url-by-package-name'.
	(tinydebian-mail-header-send-remove-item-regexp): Add `save-excursion'.
	(tinydebian-mail-mode-debian-address-add-standard-bug): Add `save-excursion'.

2008-11-09  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-orphan): New.
	(tinydebian-bts-mail-type-remove): New.
	(tinydebian-package-parse-info-all): Parse 'Description' field
	into two.
	(tinydebian-package-read-field-content-1): Use
	`match-string-no-properties'.