@@ -1,3 +1,12 @@
+2009-01-31  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-bug-url): Support Emacs BTS.
+	(tinydebian-bug-gnu-emacs-bts-p): New.
+	(tinydebian-bug-gnu-emacs-bts-string-p): New.
+
+	* tiny/tinylisp.el (tinylisp-jump-to-definition): Support
+	compressed lisp files: .el.gz
+
 2009-01-29  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinyperl.el (tinyperl-pod-grep-faq-data-context-1):
